log/build_2024-08-23_11-19-49/camera_ar_marker/stdout_stderr.log
running egg_info
writing ../build/camera_ar_marker/camera_ar_marker.egg-info/PKG-INFO
writing dependency_links to ../build/camera_ar_marker/camera_ar_marker.egg-info/dependency_links.txt
writing entry points to ../build/camera_ar_marker/camera_ar_marker.egg-info/entry_points.txt
writing requirements to ../build/camera_ar_marker/camera_ar_marker.egg-info/requires.txt
writing top-level names to ../build/camera_ar_marker/camera_ar_marker.egg-info/top_level.txt
reading manifest file '../build/camera_ar_marker/camera_ar_marker.egg-info/SOURCES.txt'
writing manifest file '../build/camera_ar_marker/camera_ar_marker.egg-info/SOURCES.txt'
running build
running build_py
copying camera_ar_marker/ar_marker_test.py -> /home/messi/camera_ar_marker/build/camera_ar_marker/build/lib/camera_ar_marker
running install
running install_lib
copying /home/messi/camera_ar_marker/build/camera_ar_marker/build/lib/camera_ar_marker/ar_marker_test.py -> /home/messi/camera_ar_marker/install/camera_ar_marker/lib/python3.10/site-packages/camera_ar_marker
byte-compiling /home/messi/camera_ar_marker/install/camera_ar_marker/lib/python3.10/site-packages/camera_ar_marker/ar_marker_test.py to ar_marker_test.cpython-310.pyc
  File "/home/messi/camera_ar_marker/install/camera_ar_marker/lib/python3.10/site-packages/camera_ar_marker/ar_marker_test.py", line 48
    if marker_ids[i][0] == 4 or marker_ids[i][0] == 3 marker_ids[i][0] == 2:  # 특정 마커 ID를 확인 (예: ID 4)
                                                      ^^^^^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/messi/camera_ar_marker/install/camera_ar_marker/lib/python3.10/site-packages/camera_ar_marker-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../build/camera_ar_marker/camera_ar_marker.egg-info to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/python3.10/site-packages/camera_ar_marker-0.0.0-py3.10.egg-info
running install_scripts
Installing ar_marker_subscriber script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing ar_marker_subscriber_executor script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing ar_marker_test script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing camera_fps script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing camera_publisher script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing cheese script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing cmd_vel_controller script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing cmd_vel_listener script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing compressed_fps script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing depthpoint_subscriber script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing rotate_robot script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing rotate_robot_test script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
Installing turtlesim_rotate script to /home/messi/camera_ar_marker/install/camera_ar_marker/lib/camera_ar_marker
writing list of installed files to '/home/messi/camera_ar_marker/build/camera_ar_marker/install.log'
